schema/testdata/errors/array_fields_default.keel
model Thing {
    fields {
        //expect-error:31:40:AttributeExpressionError:expression expected to resolve to type Text[] but it is Text
        texts Text[] @default("science")
        //expect-error:33:44:AttributeExpressionError:expression expected to resolve to type MyEnum[] but it is Text[]
        enums MyEnum[] @default(["science"])
        //expect-error:30:41:AttributeExpressionError:expression expected to resolve to type MyEnum but it is Text[]
        enum MyEnum @default(["science"])
        //expect-error:28:39:AttributeExpressionError:expression expected to resolve to type Text but it is Text[]
        text Text @default(["science"])
        //expect-error:32:42:AttributeExpressionError:expression expected to resolve to type Text[] but it is MyEnum
        texts2 Text[] @default(MyEnum.One)
    }
}

enum MyEnum {
    One
    Two
}